Implement send-example route (#976)
This change implements the `send-example` route which allows dispatching
example events to a given endpoint.
